Minor spacing fix

--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    gap: 20px;
 }
 
 main {
@@ -34,7 +35,7 @@ div {
 }
 
 header {
-    margin: 10vh 0 10px 0;
+    margin: 10vh 0 0 0;
     width: 400px;
 }
 
@@ -123,7 +124,6 @@ header {
 .undoredo {
     width: 100%;
 }
-
 
 /* Grid/Sketch-Pad */
 
@@ -238,6 +238,7 @@ label {
 #pen-color {
     border: 0;
 }
+
 /* Text */
 
 h1 {
